Actualización SecurityConfig para uso de variables dd dds de entorno dinámicas